<resources>
    <string name="app_name">FindMate</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="empty"></string>

    <string name="location_sharing">Location sharing</string>
    <string name="logout">Logout</string>

    <array name="location_sharing_items">
        <item>On</item>
        <item>Off</item>
    </array>

    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <string name="groups">Groups</string>
    <string name="create_group">Create group</string>
    <string name="join_group">Join group</string>

    <string name="invite_app">Invite new members to app</string>

    <string name="group_name">Group name</string>
    <string name="invite_code">Invite code</string>
    <string name="invite_group">Invite new members to group</string>



    <string name="event_name_hint">Event name</string>
    <string name="details_hint">Details</string>
    <string name="start_date_hint">Start date</string>
    <string name="end_date_hint">End date</string>
    <string name="location_hint">Location</string>

    <string name="share_location">Share location</string>

    <string name="facebook_app_id">1192117680855184</string>
    <string name="fb_login_protocol_scheme">fb1192117680855184</string>
    <string name="fb_app_link">https://fb.me/1192206584179627</string>
    <string name="fb_image_preview_url">http://people.sc.fsu.edu/~jburkardt/data/png/blackbuck.png</string>
    <string name="google_maps_api_key">AIzaSyBXij__CU-baV3FiJIi1WqS2dD0FiALtco</string>
    <string name="gcm_sender_id">id:761078236734</string>

    <string name="invite">Invite new members to app</string>

</resources>
