<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_groups_item"
        android:title="@string/groups">
        <menu>
            <group
                android:id="@+id/nav_groups_group"
                android:checkableBehavior="single"
                android:visible="false">
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_create_group"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/create_group"
            android:onClick="onCreateGroupClick"/>
        <item
            android:id="@+id/nav_join_group"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/join_group"
            android:onClick="onJoinGroupClick" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_invite_app"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/invite_app"
            android:onClick="onInviteToAppClick"/>
    </group>

</menu>